--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ jinja2 = "^3.1.6"
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 python-multipart = "^0.0.20"
 einops = "^0.8.1"
-coremltools = "^8.3.0"
+coremltools = { version = "^8.3.0", markers = "sys_platform == 'darwin'" }
 torch = "^2.7.1"
-pyobjc = "^11.1"
+pyobjc = { version = "^11.1", markers = "sys_platform == 'darwin'" }
 numpy = "^2.3.0"
 scipy = "^1.15.3"
 accelerate = "^1.8.1"
@@ -38,9 +38,13 @@ flower = "^2.0.1"
 celery = "^5.5.3"
 transformers = "^4.52.4"
 matplotlib = "^3.10.3"
+aio-pika = "^9.5.5"
+prometheus-client = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
+pytest = "^8.3.3"
+pytest-xdist = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
