--- a/settings/alertmanager.yml
+++ b/settings/alertmanager.yml
@@ -1,11 +1,40 @@
+global:
+  resolve_timeout: 5m
+
 route:
-  receiver: 'default'
+  group_by: ['alertname']
   group_wait: 10s
-  group_interval: 1m
+  group_interval: 10s
   repeat_interval: 1h
+  receiver: 'web.hook'
+  routes:
+  - match:
+      severity: critical
+    receiver: 'web.hook'
+    repeat_interval: 5m
+
+inhibit_rules:
+  - source_match:
+      severity: 'critical'
+    target_match:
+      severity: 'warning'
+    equal: ['alertname', 'dev', 'instance']
 
 receivers:
-  - name: 'default'
-    webhook_configs:
-      - url: 'http://backend:8000/health/rabbitmq'
-        send_resolved: true
+- name: 'web.hook'
+  webhook_configs:
+  - url: 'http://backend:8000/health/rabbitmq'
+    send_resolved: true
+  - url: 'http://127.0.0.1:5001/'
+    send_resolved: true
+
+- name: 'slack-notifications'
+  slack_configs:
+  - api_url: 'https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK'
+    channel: '#alerts'
+    send_resolved: true
+
+- name: 'email-notifications'
+  email_configs:
+  - to: 'admin@example.com'
+    send_resolved: true
