--- a/settings/prometheus.yml
+++ b/settings/prometheus.yml
@@ -1,6 +1,9 @@
 global:
   scrape_interval: 15s
 
+rule_files:
+  - "alert_rules.yml"
+
 scrape_configs:
   - job_name: 'backend'
     static_configs:
@@ -14,3 +17,9 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+          - alertmanager:9093
