--- a/settings/alertmanager.yml
+++ b/settings/alertmanager.yml
@@ -34,7 +34,7 @@ receivers:
     channel: '#alerts'
     send_resolved: true
 
-- name: 'email-notifications'
-  email_configs:
-  - to: 'admin@example.com'
-    send_resolved: true
+# - name: 'email-notifications'
+#   email_configs:
+#   - to: 'admin@example.com'
+#     send_resolved: true
