feat: major project improvements and admin management
- Enhanced Makefile with comprehensive admin management commands
- Added multiple admin creation scripts (direct, local, docker)
- Improved authentication system with legacy password support
- Updated database models with proper table names and constraints
- Added transaction management functionality
- Enhanced Docker configuration and deployment scripts
- Added environment configuration files (dev.env, local.env)
- Improved frontend marketing pages
- Added comprehensive backup system
- Updated ORM models with proper Pydantic v2 compatibility
- Enhanced project setup and status checking commands
- Added complete Docker setup with tables and admin user creation
- Improved error handling and logging throughout the application

Key improvements:
- Complete admin user management system
- Better Docker container orchestration
- Enhanced database schema with proper constraints
- Improved authentication with backward compatibility
- Comprehensive project setup automation

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: python run_app_simple.py
     env_file:
       - settings/prod.env
     ports:
@@ -39,9 +40,6 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.prod
-    ports:
-      - "80:80"
-      - "443:443"
     networks:
       - monitor
     restart: unless-stopped
