Исправлены проблемы с подключением к базе данных и Celery в Docker
- Изменены настройки подключения к PostgreSQL с localhost на postgres (имя сервиса)
- Исправлены настройки RabbitMQ для Celery broker
- Добавлена зависимость redis в pyproject.toml
- Обновлены настройки подключения к Redis и RabbitMQ в dev.env
- Все сервисы теперь успешно подключаются друг к другу в Docker сети

--- a/settings/dev.env
+++ b/settings/dev.env
@@ -8,8 +8,8 @@ STACK_NAME=agent-trade-project
 # Postgres (локальная база данных)
 DB__USER=agent
 DB__PASSWORD=agent
-DB__HOST=localhost
-DB__HOST_ALT=localhost
+DB__HOST=postgres
+DB__HOST_ALT=postgres
 DB__DB_NAME=agent
 DB__PORT=5432
 
@@ -20,13 +20,13 @@ SECURITY__REFRESH_SECRET_KEY=fsmfels23tmk2
 LOGGING__LEVEL=INFO
 
 # Redis (локальный)
-RABBITMQ__HOST=localhost
-RABBITMQ__PORT=6379
-RABBITMQ__USER=
-RABBITMQ__PASSWORD=
+RABBITMQ__HOST=rabbitmq
+RABBITMQ__PORT=5672
+RABBITMQ__USER=agent
+RABBITMQ__PASSWORD=agent
 
-RUN__CELERY_BROKER_URL=redis://localhost:6379/0
-RUN__CELERY_RESULT_BACKEND=redis://localhost:6379/0
+RUN__CELERY_BROKER_URL=amqp://agent:agent@rabbitmq:5672//
+RUN__CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 RUN__HOST=0.0.0.0
 RUN__PORT=8000
