--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ aio-pika = "^9.5.5"
 prometheus-client = "^0.20.0"
 streamlit = "^1.36.0"
 plotly = "^5.24.1"
+redis = "^5.2.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
